perl (5.10.1-10) UNRELEASED; urgency=low

  * Add conflicts/replaces/provides for libtime-local-perl. (Closes: #567188)
  * Really add the new perl-modules README.Debian. (Closes: #565721)
  * Make libcgi-fast-perl depend on perl (<< 5.10.2~) because
    it's now in the core directory. (Closes: #567092)

 -- Niko Tyni <ntyni@debian.org>  Thu, 28 Jan 2010 11:56:28 +0200

perl (5.10.1-9) unstable; urgency=low

  * Move CGI/Fast.pm back to the core directory so that libcgi-pm-perl
    can override it. (Closes: #563713)
  * Add a README.Debian file to perl-modules.
  * Other packages should not depend on perl-modules but perl;
    clarify this in the perl-modules long description and the new
    README.Debian file. (Closes: #552052)
  * Fix a NULL pointer dereference when looking for a DESTROY method.
    (Closes: #564074)
  * Add conflicts/replaces/provides for libfile-spec-perl. (Closes: #556789)
    + note that perl-base contains part of libfile-spec-perl, so it has
      a conflicts entry for earlier versions but does not provide and
      replace it. The rest of the functionality is in perl-modules.

 -- Niko Tyni <ntyni@debian.org>  Sat, 16 Jan 2010 22:13:15 +0200

perl (5.10.1-8) unstable; urgency=medium

  * Fix another perl-suid/i386 dependency bug by using dpkg-shlibdeps
    correctly. (Closes: #556847)
  * Add Conflicts/Replaces/Provides for libthread-queue-perl.
    (Closes: #556793)

 -- Niko Tyni <ntyni@debian.org>  Sat, 21 Nov 2009 21:01:14 +0200

perl (5.10.1-7) unstable; urgency=medium

  * Only run dpkg-shlibdeps when all the shlibs files have been created.
    This fixes perl-suid dependencies on i386. (Closes: #552797)
  * Set myself as Maintainer and remove Brendan O'Dea from the control
    file at his request.
  * Make the threads-shared test suite more robust, fixing failures on hppa.
    (Closes: #554218)

 -- Niko Tyni <ntyni@debian.org>  Fri, 06 Nov 2009 22:18:07 +0200

perl (5.10.1-6) unstable; urgency=high

  * Added /me to Uploaders.