@@ -4,6 +4,7 @@ perl (5.10.1-10) UNRELEASED; urgency=low
   * Really add the new perl-modules README.Debian. (Closes: #565721)
   * Make libcgi-fast-perl depend on perl (<< 5.10.2~) because
     it's now in the core directory. (Closes: #567092)
+  * Switch to dpkg v3 source format.
 
  -- Niko Tyni <ntyni@debian.org>  Thu, 28 Jan 2010 11:56:28 +0200
 
